--- a/datasets/Test_dataset.ipynb
+++ b/datasets/Test_dataset.ipynb
@@ -2,8 +2,100 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "0e89aeac",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torchvision.transforms as transforms \n",
+    "import pandas as pd\n",
+    "from PIL import Image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class StartingDataset(torch.utils.data.Dataset):\n",
+    "    def __init__(self, df_path=\"cass_data/train.csv\", img_path=\"cass_data/train_images\", train=True):\n",
+    "        df = pd.read_csv(df_path).sample(frac = 1, random_state=42).reset_index(drop=True)\n",
+    "\n",
+    "        train_percentage = 0.8\n",
+    "        rows = df.shape[0]\n",
+    "        train_rows = int(rows * train_percentage)\n",
+    "\n",
+    "        if train:\n",
+    "            self.df = df.iloc[:train_rows]\n",
+    "        else:\n",
+    "            self.df = df.iloc[train_rows:]\n",
+    "        \n",
+    "        self.df = self.df.reset_index(drop=True)\n",
+    "\n",
+    "        self.img_path = img_path\n",
+    "\n",
+    "        self.transforms = transforms.Compose([\n",
+    "            transforms.Resize((224,224)),\n",
+    "            transforms.ToTensor(),\n",
+    "        ])\n",
+    "\n",
+    "    def __getitem__(self, index):\n",
+    "        jpg_str = str(self.df.loc[index]['image_id'])\n",
+    "        label = self.df.loc[index]['label']\n",
+    "\n",
+    "        with Image.open(f\"{self.img_path}/{jpg_str}\") as im:\n",
+    "            im = self.transforms(im)\n",
+    "\n",
+    "        print(\"label:\", label)\n",
+    "        return im, label\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_path = \"../cass_data/train.csv\"\n",
+    "img_path = \"../cass_data/train_images\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train = StartingDataset(df_path=df_path, img_path=img_path, train=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4280"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -34,27 +126,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1000015157.jpg</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2824543301.jpg</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1000201771.jpg</td>\n",
+       "      <td>184909120.jpg</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>100042118.jpg</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2602456265.jpg</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1000723321.jpg</td>\n",
-       "      <td>1</td>\n",
+       "      <td>1331491784.jpg</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1000812911.jpg</td>\n",
+       "      <td>414363375.jpg</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -63,69 +155,75 @@
       ],
       "text/plain": [
        "         image_id  label\n",
-       "0  1000015157.jpg      0\n",
-       "1  1000201771.jpg      3\n",
-       "2   100042118.jpg      1\n",
-       "3  1000723321.jpg      1\n",
-       "4  1000812911.jpg      3"
+       "0  2824543301.jpg      3\n",
+       "1   184909120.jpg      3\n",
+       "2  2602456265.jpg      3\n",
+       "3  1331491784.jpg      3\n",
+       "4   414363375.jpg      3"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import torch\n",
-    "import torchvision\n",
-    "import pandas as pd\n",
-    "from PIL import Image\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "class StartingDataset(torch.utils.data.Dataset):\n",
-    "    \"\"\"\n",
-    "    Dataset that contains 100000 3x224x224 black images (all zeros).\n",
-    "    \"\"\"\n",
-    "\n",
-    "    def __init__(self):\n",
-    "        self.data = pd.read_csv('../cass_data/train.csv')\n",
-    "\n",
-    "\n",
-    "    def __getitem__(self, index):\n",
-    "        with Image.open(\"../cass_data/train_images/6103.jpg\") as im:\n",
-    "            #x = im.rotate(0).show()\n",
-    "            #pix_val = torch.Tensor(im.getdata()) #have to reshape to smaller size\n",
-    "            \n",
-    "            resize = im.resize((224,224))\n",
-    "            #x = resize.rotate(0).show()\n",
-    "            y = torch.Tensor(resize.getdata())\n",
-    "            z = y.reshape((3,224,224))\n",
-    "       \n",
-    "\n",
-    "        inputs = torch.zeros([3, 224, 224])\n",
-    "        label = 0\n",
-    "        a = z.shape\n",
-    "        b=inputs.shape\n",
-    "\n",
-    "        #return inputs, label\n",
-    "        return a,b\n",
-    "\n",
-    "    def __len__(self):\n",
-    "        return 10000\n",
-    "\n",
-    "\n",
-    "x = StartingDataset()\n",
-    "x.__getitem__(0)\n",
-    "x.data.head()\n",
-    "\n",
-    "#finish __getitem__\n",
-    "#finish "
+    "train.df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "label: 3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[[0.1961, 0.1765, 0.1216,  ..., 0.2431, 0.3412, 0.4471],\n",
+       "          [0.1490, 0.1137, 0.1020,  ..., 0.1961, 0.3294, 0.5569],\n",
+       "          [0.1490, 0.1451, 0.1216,  ..., 0.1882, 0.3333, 0.4902],\n",
+       "          ...,\n",
+       "          [0.0196, 0.0353, 0.0588,  ..., 0.2745, 0.1725, 0.0745],\n",
+       "          [0.0196, 0.0353, 0.0667,  ..., 0.3529, 0.3137, 0.2039],\n",
+       "          [0.0196, 0.0353, 0.0588,  ..., 0.4549, 0.2980, 0.4353]],\n",
+       " \n",
+       "         [[0.1529, 0.1333, 0.0863,  ..., 0.1725, 0.2667, 0.3686],\n",
+       "          [0.0902, 0.0588, 0.0471,  ..., 0.1255, 0.2588, 0.4824],\n",
+       "          [0.0784, 0.0784, 0.0627,  ..., 0.1176, 0.2627, 0.4157],\n",
+       "          ...,\n",
+       "          [0.0157, 0.0314, 0.0549,  ..., 0.2275, 0.1255, 0.0431],\n",
+       "          [0.0157, 0.0314, 0.0627,  ..., 0.3020, 0.2627, 0.1686],\n",
+       "          [0.0157, 0.0314, 0.0549,  ..., 0.4039, 0.2471, 0.4000]],\n",
+       " \n",
+       "         [[0.0627, 0.0784, 0.0431,  ..., 0.1176, 0.2039, 0.2784],\n",
+       "          [0.0549, 0.0471, 0.0471,  ..., 0.0706, 0.1843, 0.3765],\n",
+       "          [0.0549, 0.0667, 0.0549,  ..., 0.0588, 0.1725, 0.2980],\n",
+       "          ...,\n",
+       "          [0.0078, 0.0235, 0.0471,  ..., 0.1843, 0.0980, 0.0196],\n",
+       "          [0.0078, 0.0235, 0.0549,  ..., 0.2667, 0.2353, 0.1333],\n",
+       "          [0.0078, 0.0235, 0.0471,  ..., 0.3765, 0.2235, 0.3529]]]),\n",
+       " 3)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train[30]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f889080e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -147,7 +245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
